fixed tab size and alignment in nav bar

--- a/massage_and_facials/css/application.css
+++ b/massage_and_facials/css/application.css
@@ -30,3 +30,15 @@ body.f-topbar-fixed {
   align-items: center;
   justify-content: center;
 }
+
+.top-bar {
+  height: 4rem;
+}
+
+a.tab-text {
+  height: 90%;
+  width:100%;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
