--- a/massage_and_facials/css/foundation.css
+++ b/massage_and_facials/css/foundation.css
@@ -1851,7 +1851,7 @@ meta.foundation-mq-topbar {
       color: #FFFFFF;
       display: block;
       font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-      font-size: 0.8125rem;
+      font-size: 1.2rem;
       font-weight: normal;
       padding-left: 0.9375rem;
       padding: 12px 0 12px 0.9375rem;
@@ -2091,7 +2091,7 @@ meta.foundation-mq-topbar {
     left: 0 !important; }
     .top-bar-section ul {
       display: inline;
-      height: auto !important;
+      height: 4rem;
       width: auto; }
       .top-bar-section ul li {
         float: left; }
@@ -2103,7 +2103,8 @@ meta.foundation-mq-topbar {
       color: #FFFFFF; }
     .top-bar-section li:not(.has-form) a:not(.button) {
       background: rgba(0,0,0,.0);
-      line-height: 2.8125rem;
+      line-height: 4rem;
+      height: 4rem;
       padding: 0 0.9375rem; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
         background-color: #555555;
